# jojo_axum_api

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  api.http  apidev.http  docker-compose.yml  dockerfile  package-lock.json
migrations/: 01_init.down.sql  01_init.up.sql  02_dropcol.up.sql  20230922174222_init.up.sql
src/: config.rs  db.rs  lib.rs  main.rs  todo.rs
src/controllers/: default.rs  health_check.rs  iaaf_points.rs  jwt_auth.rs  mod.rs  routes.rs  system_info.rs  token.rs  users.rs
src/controllers/utils/: auth_models.rs
src/db_models/: iaaf_points.rs  todo.rs  user.rs
src/models/: mod.rs  todo.rs  user.rs
src/pages/: index.rs  mod.rs  pagerouter.rs  pointspage.rs
src/req_models/: mod.rs  token.rs  user_req.rs
src/routes/: auth.rs  files.rs  iaaf_points.rs  jwt_auth.rs  mod.rs  routes.rs  system_info.rs  users.rs
src/routes/database_functions/: users_db.rs
src/routes/utils/: constants.rs  mod.rs  token.rs
templates/: index.html  nav.html  pointsindex.html
templates/components/: point.html
