[package]
name = "rust_api_axum_diesel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
dotenvy = "0.15"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4"
tower-http = { version = "0.5.2", features = ["cors"] }
sqlx = { version = "0.7.3", features = [ "runtime-tokio", "postgres","uuid", "time" ] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
askama = "0.12.1"
validator = "0.18.1"
